public/styles/main.css
body {
  background-image: url("../assets/home-background.jpg");
  margin-top: 0.5rem;
  text-align: center;
}

h1, #footer {
  color: palegoldenrod;
  padding-left: 0px;
}

#post-text {
  background-color: white;
  margin-bottom: 10px;
}

#name {
  background-color: white;
  margin-bottom: 5px;
}

[type='submit'] {
  background-color: whitesmoke;
}

#create-post-button {
  background-color: whitesmoke;
  border: 10px;
}

h2 {
  color: white;
  padding-right: 5px;
}

ul {
  list-style-type: none;
  color: white;
  padding-right: 40px;
}

#post-list {
  text-align:left;
}

